--- a/saitae-web/src/main/webapp/pages/solicitudH.xhtml
+++ b/saitae-web/src/main/webapp/pages/solicitudH.xhtml
@@ -147,7 +147,7 @@
                             </ui:repeat>
                         </h:panelGrid>
                     </p:panel>
-                    <p:commandButton value="Cancelar" update="d2" oncomplete="PF('Dreserva1').show();"
+                    <p:commandButton value="Cancelar Solicitud" update="d2" oncomplete="PF('Dreserva1').show();"
                             icon="pi pi-times" rendered="#{historialRController.sePuedeCancelar}"/>
                 </h:panelGrid>
             </h:form>
