--- a/saitae-web/src/main/webapp/index.xhtml
+++ b/saitae-web/src/main/webapp/index.xhtml
@@ -12,7 +12,7 @@
         <h:outputStylesheet library="css" name="main.css"/>
     </h:head>
     <!--style="background-color: #323232; color: #ffffff"  -->
-    <h:body class="home" style="background-color: #323232; color: #ffffff">
+    <h:body class="home">
         <style>
             .centred-form{
                 margin: 8% auto;
@@ -113,6 +113,6 @@
             </div>
         </div>
         <br />
-        <h:link outcome="welcomePrimefaces" value="Primefaces welcome page" />
+       <!-- <h:link outcome="welcomePrimefaces" value="Primefaces welcome page" />-->
     </h:body>   
 </html>
