--- a/saitae-web/src/main/webapp/pages/perfil.xhtml
+++ b/saitae-web/src/main/webapp/pages/perfil.xhtml
@@ -8,6 +8,7 @@
     <body>
         <ui:composition template="./../WEB-INF/template/plantilla1.xhtml">
             <ui:define name="content">
+                <f:event type="preRenderView" listener="#{themeControlller.init()}"/>
                 <style type="text/css">
                     .value {
                         font-weight: bold;
