--- a/saitae-web/src/main/webapp/pages/lictp.xhtml
+++ b/saitae-web/src/main/webapp/pages/lictp.xhtml
@@ -46,15 +46,15 @@
                                     </p:cellEditor>
                                 </p:column>
 
-                                <p:column headerText="Días al mes" style="width: 30px">
+                                <!--<p:column headerText="Días al mes" style="width: 30px">
                                     <p:cellEditor>
-                                        <f:facet name="output"><h:outputText value="#{tp.tipoPermisoDiasMes}" /></f:facet>
-                                        <f:facet name="input"><p:inputText value="#{tp.tipoPermisoDiasMes}" style="width:100%" 
+                                        <f:facet name="output"><h:outputText value="# {tp.tipoPermisoDiasMes}" /></f:facet>
+                                        <f:facet name="input"><p:inputText value="# {tp.tipoPermisoDiasMes}" style="width:100%" 
                                                                            label="Días permitidos al mes"/></f:facet>
                                     </p:cellEditor>
                                 </p:column>
 
-                                <p:column style="width:32px">
+                                --><p:column style="width:32px">
                                     <p:rowEditor />
                                 </p:column>
                             </p:dataTable>
