--- a/saitae-web/src/main/webapp/pages/permiso.xhtml
+++ b/saitae-web/src/main/webapp/pages/permiso.xhtml
@@ -195,7 +195,7 @@
                                 <p:commandButton id="summit" value="Conceder" 
                                                  disabled="#{admPermisoController.permiso.persona==null}"
                                                  actionListener="#{admPermisoController.concederPermiso()}" 
-                                                 update="ap"/>
+                                                 update="form"/>
                             </h:panelGrid>
                         </p:tab>
                     </p:accordionPanel>
